Adds UI for turning notifications on/off